--- a/src/stylesheets/footer.css
+++ b/src/stylesheets/footer.css
@@ -9,6 +9,7 @@
 	height: 50px;
 	min-width: 100%;
 	z-index: 1;
+	color: white;
 }
 
 .content {
@@ -25,5 +26,20 @@
 
 	& i {
 		margin: 5px;
+	}
+}
+
+@media (max-width: 700px) {
+	.content {
+		margin: 0 5px;
+	}
+
+	.social {
+		font-size: 15px;
+		width: 14vw;
+	
+		& i {
+			margin: 2px;
+		}
 	}
 }
