--- a/src/stylesheets/gallery.css
+++ b/src/stylesheets/gallery.css
@@ -6,6 +6,7 @@
 .container {
 	display: flex;
 	flex-direction: row;
+	margin-top: 60px;
 }
 
 .image {
@@ -14,13 +15,22 @@
     margin: 10vh auto 10vh 15%;
 }
 
-.caption {
+.wrapper {
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 50vw;
 	margin: auto 10vw auto 5vw;
-	font-family: 'Gotham-ExtraLight';
+}
+
+.title {
+	font-size: larger;
 	color: black;
-	justify-content: center;
+}
+
+.caption {
+	font-family: 'Lora', serif;
+	color: grey;
 }
 
 .arrow {
@@ -44,16 +54,28 @@
 	z-index: 1;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
 	.container {
 		flex-direction: column;
+		margin-top: 0;
 	}
 
 	.image {
-		margin: 5vh auto 5vh auto;
+		margin: 15vh auto 5vh auto;
+		height: 50vh;
+		width: auto;
+	}
+
+	.wrapper {
+		text-align: center;
+	}
+
+	.title {
+		width: 90vw;
 	}
 
 	.caption {
-		margin: auto;
+		margin: 2vh auto;
+		width: 90vw;
 	}
 }
