--- a/src/stylesheets/content.css
+++ b/src/stylesheets/content.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-	min-height: 100vh;
+	min-height: 30vh;
+	padding: 5vh;
 	color: black;
 }
 
@@ -18,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-	margin: 10px;
+	margin: 10px 30px;
 	width: 40vw;
 }
 
