--- a/src/stylesheets/footer.css
+++ b/src/stylesheets/footer.css
@@ -29,6 +29,18 @@
 	}
 }
 
+.frog {
+	display: -webkit-inline-box;
+    flex-direction: column;
+	justify-content: center;
+	border-radius: 50px;
+	margin: 0 30px;
+	height: 30px;
+    padding-top: 10px;
+    width: 40px;
+    border-radius: 40px;
+}
+
 @media (max-width: 700px) {
 	.content {
 		margin: 0 5px;
