--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -45,12 +45,14 @@
 .submit {
 	font-size: 15px;
     border: 1px solid white;
-	width: 40vw;
-	max-width: 200px;
-    height: 35px;
+    width: 40vw;
+    max-width: 200px;
+    height: 36px;
     text-align: center;
     vertical-align: middle;
-    line-height: 35px;
+    line-height: 30px;
+    background-color: transparent;
+    color: white;
 }
 
 @media (max-width: 700px) {
